--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
       <div class="form-actions">
         <button class="btn btn-outline" id="skipGate" onclick="window.__skipGate && window.__skipGate()">Lain kali</button>
-        <button class="btn" id="saveGate" onclick="if(window.__saveGate){ window.__saveGate(); }">Lanjut</button>
+        <button class="btn" id="saveGate" onclick="window.__saveGate && window.__saveGate()">Lanjut</button>
       </div>
     </div>
   </div>
@@ -177,12 +177,19 @@
       if(!panel || !save || !skip || !nameEl) { console.error('Gate elements not found'); return; }
 
       // backup handlers so it still works even if events fail
-      window.__saveGate = async function(){
+      window.__saveGate = function(){
         const name = nameEl.value.trim();
         const phone = phoneEl.value.trim();
         const email = emailEl.value.trim();
         if(!name){ alert('Nama wajib diisi'); nameEl.focus(); return; }
         const buyer = {name, phone, email};
+        try { localStorage.setItem('buyer', JSON.stringify(buyer)); } catch(e) {}
+        showGate(false);
+        const p = apiPost({action:'register', buyer});
+        if (p && typeof p.then === 'function') {
+          p.catch(e => console.warn('Register post failed', e));
+        }
+      };
         try { localStorage.setItem('buyer', JSON.stringify(buyer)); } catch(e) {}
         showGate(false);
         try { await apiPost({action:'register', buyer}); } catch(e) { console.warn('Register post failed', e); }
@@ -205,13 +212,20 @@
 
     // ===== CHECKOUT MARKING =====
     async function markCheckout(id, buyerName){
-      statusMap[id] = {status:'SOLD', checkout_by: buyerName};
-      // Persist locally as fallback
-      const local = JSON.parse(localStorage.getItem('soldMap')||'{}');
-      local[id] = statusMap[id];
-      localStorage.setItem('soldMap', JSON.stringify(local));
-      try{ await apiPost({action:'checkout', id, checkout_by: buyerName}); }catch(e){}
-      apply();
+      return apiPost({action:'checkout', id, checkout_by: buyerName}).then(res => {
+        if (res && res.ok) {
+          statusMap[id] = {status:'SOLD', checkout_by: buyerName};
+          const local = JSON.parse(localStorage.getItem('soldMap')||'{}');
+          local[id] = statusMap[id];
+          localStorage.setItem('soldMap', JSON.stringify(local));
+          apply();
+        } else if (res && res.error === 'already_sold') {
+          alert('Maaf, item ini sudah di-claim orang lain.');
+          return loadStatus().then(apply);
+        } else {
+          alert('Gagal menyimpan status. Coba lagi.');
+        }
+      }).catch(() => alert('Koneksi bermasalah. Coba lagi.'));
     }
 
     async function loadStatus(){
@@ -260,17 +274,16 @@
       }).join("");
       // attach handlers
       grid.querySelectorAll('a[data-checkout]').forEach(a => {
-        a.addEventListener('click', async (ev) => {
-          const card = ev.currentTarget.closest('.card');
-          const id = card.dataset.id;
-          const item = items.find(x => (x.id||x.name.toLowerCase().replace(/[^a-z0-9]+/g,'-'))===id);
-          if(!item) return;
-          const buyer = getBuyer();
-          if(!buyer){ showGate(true); ev.preventDefault(); return; }
-          // Optimistic mark + send to backend
-          await markCheckout(id, buyer.name);
-        });
+        a.addEventListener('click', (ev) => {
+        const card = ev.currentTarget.closest('.card');
+        const id = card.dataset.id;
+        const item = items.find(x => (x.id||x.name.toLowerCase().replace(/[^a-z0-9]+/g,'-'))===id);
+        if(!item) return;
+        const buyer = getBuyer();
+        if(!buyer){ showGate(true); ev.preventDefault(); return; }
+        markCheckout(id, buyer.name);
       });
+    });
     }" alt="${it.name}" />
           <div class="info">
             <div class="type">${it.type ? it.type : ''}</div>
